// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectWalletMandatoryModal renders correctly 1`] = `
<View
  testID="modal-mock"
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "paddingBottom": 0,
        "paddingHorizontal": 40,
        "paddingTop": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ca35421a",
          "borderColor": "#ca3542",
          "borderRadius": 28,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "width": 56,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 20,
            },
            {
              "alignSelf": "center",
              "color": "#ca3542",
            },
            {
              "fontFamily": "Feather",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 18,
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Protect your wallet
    </Text>
    <Text
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "justifyContent": "center",
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Protect your wallet by setting a password and saving your Secret Recovery Phrase (required).
    </Text>
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#4459ff",
            "borderRadius": 12,
            "justifyContent": "center",
            "minHeight": 50,
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#007aff",
                "fontSize": 17,
                "fontWeight": "500",
                "textAlign": "center",
              },
              null,
              [
                {
                  "fontFamily": "Geist-Bold",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                {
                  "color": "#ffffff",
                },
                undefined,
              ],
              null,
            ]
          }
        >
          Protect wallet
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProtectWalletMandatoryModal renders correctly on iPhoneX 1`] = `
<View
  testID="modal-mock"
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "paddingBottom": 20,
        "paddingHorizontal": 40,
        "paddingTop": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ca35421a",
          "borderColor": "#ca3542",
          "borderRadius": 28,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "width": 56,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 20,
            },
            {
              "alignSelf": "center",
              "color": "#ca3542",
            },
            {
              "fontFamily": "Feather",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Bold",
          "fontSize": 18,
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Protect your wallet
    </Text>
    <Text
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist-Regular",
          "fontSize": 14,
          "justifyContent": "center",
          "marginVertical": 8,
          "textAlign": "center",
        }
      }
    >
      Protect your wallet by setting a password and saving your Secret Recovery Phrase (required).
    </Text>
    <View
      style={
        {
          "marginVertical": 8,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#4459ff",
            "borderRadius": 12,
            "justifyContent": "center",
            "minHeight": 50,
            "opacity": 1,
            "padding": 15,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#007aff",
                "fontSize": 17,
                "fontWeight": "500",
                "textAlign": "center",
              },
              null,
              [
                {
                  "fontFamily": "Geist-Bold",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                {
                  "color": "#ffffff",
                },
                undefined,
              ],
              null,
            ]
          }
        >
          Protect wallet
        </Text>
      </View>
    </View>
  </View>
</View>
`;
